@@ -126,7 +126,8 @@
 	 path-info)))
 
 (define (path->path-info path)
-  (simplify-path-info (string-split path #[/])))
+  (and path
+       (simplify-path-info (string-split path #[/]))))
 
 (define (path-info->abs-path path-info)
   (if (null? path-info)
