@@ -1,3 +1,14 @@
+2007-08-15  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
+	          src/kahua/server.scm, test/server.scm, cgi/kahua.cgi.in
+	  Now cookie handling fit RFC2965 more.
+
+	* Change: src/kahua/config.scm.in
+	  Configurable item "session-domain" added.  It can have :site,
+	  :bridge, :worker or session range URI or path(string). Default
+	  value is :site.
+
 2007-08-13  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: src/kahua/protocol/http.scm, src/kahua/protocol/worker.scm,
